Add Cloudflare Scanner
